<resources>
    <string name="app_name">RoomApp</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="get">Get</string>
    <string name="filter">Filter by ID</string>
    <string name="person_name">Person name</string>
    <string name="done">Done!</string>
    <string name="error">Error!</string>
    <string name="session">Session: %d</string>
</resources>