<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/outputView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/inputView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/person_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="@id/inputView"
        app:layout_constraintTop_toBottomOf="@id/inputView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/clear"
        app:layout_constraintStart_toStartOf="@id/inputView"
        app:layout_constraintTop_toBottomOf="@id/submitButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/get"
        app:layout_constraintEnd_toEndOf="@id/inputView"
        app:layout_constraintTop_toBottomOf="@id/inputView" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/filterToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@id/getButton"
        app:layout_constraintTop_toBottomOf="@id/getButton" />

</androidx.constraintlayout.widget.ConstraintLayout>